--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "영화 정보",
+  "name": "심플한 영화 정보 제공 앱",
   "icons": [
     {
       "src": "windows11/SmallTile.scale-100.png",
@@ -568,7 +568,7 @@
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "dir": "auto",
-  "scope": "https://cree1116.github.io/Movie/",
+  "scope": ".",
   "orientation": "any",
   "lang": "en"
 }
