라우터 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -568,7 +568,7 @@
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "dir": "auto",
-  "scope": "https://cree1116.github.io/",
+  "scope": "https://cree1116.github.io/movie-web-service",
   "orientation": "any",
   "lang": "en"
 }
